# gingerit

./: .editorconfig  README.rst  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  linter.yml
docs/: conf.py
gingerit/: gingerit.py
tests/: test_gingerit.py
