[tool.poetry]
name = "gingerit"
version = "0.8.2"
description = """
Correcting spelling and grammar mistakes based on the context of complete \
entences. Wrapper around the gingersoftware.com API\
"""
authors = ["Tim Kleinschmdit <tim.kleinschmidt@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Azd325/gingerit"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = ">=3.6.2,<4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
isort = "^5.9.1"
pyupgrade = "^2.20.0"
